src/test/deca/syntax/invalid/obtained_res/fauxAssignsynt.res
./src/test/deca/syntax/invalid/created/testInitVar/fauxAssign.deca:10:4: left-hand side of assignment is not an lvalue
